Make the title Uncertain by Principle

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Uncertain by Principle</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Stephen Demjanenko</h1>
+    <h1>Uncertain by Principle</h1>
+    <h4>Stephen Demjanenko</h4>
     <h5>Astrophysicist, UI hacker</h5>
   </body>
 </html>
