--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,16 @@
   </head>
   <body>
     <h1>Uncertain by Principle</h1>
-    <h4>Stephen Demjanenko</h4>
-    <h5>Astrophysicist, UI hacker</h5>
+    <div class="content">
+      <div class="profile">
+        <h4>Stephen Demjanenko</h4>
+        <h5>Astrophysicist, UI hacker, climber</h5>
+        <img src="/images/profile_pic.jpg" />
+      </div>
+      <div class="intro">
+        I am 23 years old and I live in SF.  I work on the UI team at Meraki.
+        In my spare time, I rock climb, hack and think about the universe.
+      </div>
+    </div>
   </body>
 </html>
