--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,38 @@
+@import "grid_stylus/reset.styl"
+@import "grid_stylus/960/grid.styl"
+//@import url(http://fonts.googleapis.com/css?family=Enriqueta)
+
+var_grid_columns 12
+var_grid_gutter 20px
+var_grid_width 960px
+
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  container()
+
+h1
+  font-size 60px
+  font-family 'Enriqueta', serif
+
 a
-  color: #00B7FF
+  color #00b7ff
+
+.titlewrapper
+  text-align center
+  margin-bottom 40px
+
+#primary_layout
+  width 960px
+  grid(12)
+  margin-left auto
+  margin-right auto
+
+.content
+  overflow auto
+  grid_(12)
+
+.profile
+  grid_(4)
+
+.intro
+  grid(8)
