--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,24 @@
 <html>
   <head>
     <title>Uncertain by Principle</title>
-    <link rel='stylesheet' href='/stylesheets/main.css' />
+    <link href='http://fonts.googleapis.com/css?family=Enriqueta' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Uncertain by Principle</h1>
-    <div class="content">
-      <div class="profile">
-        <h4>Stephen Demjanenko</h4>
-        <h5>Astrophysicist, UI hacker, climber</h5>
-        <img src="/images/profile_pic.jpg" />
+    <div id="primary_layout">
+      <div class="titlewrapper">
+        <h1>Uncertain by Principle</h1>
       </div>
-      <div class="intro">
-        I am 23 years old and I live in SF.  I work on the UI team at Meraki.
-        In my spare time, I rock climb, hack and think about the universe.
+      <div class="content">
+        <div class="profile">
+          <h4>Stephen Demjanenko</h4>
+          <h5>Astrophysicist, UI hacker, climber</h5>
+          <img src="/images/profile_pic.jpg" />
+        </div>
+        <div class="intro">
+          I am 23 years old and I live in SF.  I work on the UI team at Meraki.
+          In my spare time, I rock climb, hack and think about the universe.
+        </div>
       </div>
     </div>
   </body>
