Use the Enriqueta font for all text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1326,7 +1326,6 @@ var_grid_columns 12,
 var_grid_gutter 20px,
 var_grid_width 960px,
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   width: 960px;
   margin-left: auto;
   margin-right: auto;
@@ -1340,12 +1339,14 @@ a {
 }
 .titlewrapper {
   text-align: center;
+  margin-top: 10px;
   margin-bottom: 40px;
 }
 #primary_layout {
   width: 960px;
   margin-left: auto;
   margin-right: auto;
+  font: 14px 'Enriqueta', serif;
 }
 .content {
   overflow: auto;
