--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,13 +1,11 @@
 @import "grid_stylus/reset.styl"
 @import "grid_stylus/960/grid.styl"
-//@import url(http://fonts.googleapis.com/css?family=Enriqueta)
 
 var_grid_columns 12
 var_grid_gutter 20px
 var_grid_width 960px
 
 body
-  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
   container()
 
 h1
@@ -19,6 +17,7 @@ a
 
 .titlewrapper
   text-align center
+  margin-top 10px
   margin-bottom 40px
 
 #primary_layout
@@ -26,6 +25,7 @@ a
   grid(12)
   margin-left auto
   margin-right auto
+  font 14px 'Enriqueta', serif
 
 .content
   overflow auto
