Change some of the wrapper/content classes around
Trying to make it easier to reuse the different classes on many pages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1346,7 +1346,7 @@ a {
   margin-right: auto;
   font: 14px 'Enriqueta', serif;
 }
-.content {
+.wrapper {
   overflow: auto;
   width: 940px;
   display: inline;
