--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -25,12 +25,12 @@ a
   margin-right auto
   font 14px 'Enriqueta', serif
 
-.content
+.wrapper
   overflow auto
   grid_(12)
 
 .profile
   grid_(4)
 
-.intro
+.content
   grid(8)
