--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,18 @@
   <body>
     <div id="primary_layout">
       <h1>Uncertain by Principle</h1>
-      <div class="content">
+      <div class="wrapper">
         <div class="profile">
           <h4>Stephen Demjanenko</h4>
           <h5>Astrophysicist, UI hacker, climber</h5>
           <img src="/images/profile_pic.jpg" />
         </div>
-        <div class="intro">
+        <div class="content">
           I am 23 years old and I live in SF.  I work on the UI team at Meraki.
           In my spare time, I rock climb, hack and think about the universe.
+        </div>
+        <div class="content">
+          Check out my <a href="./sublime">Sublime settings</a>
         </div>
       </div>
     </div>
