--- a/views/sublime.ejs
+++ b/views/sublime.ejs
@@ -8,7 +8,7 @@
   <body>
     <div id="primary_layout">
       <h1>Uncertain by Principle</h1>
-      <div class="content">
+      <div class="wrapper">
         <h3>Sublime Packages</h3>
         <ul>
           <li><a href='https://github.com/kemayo/sublime-text-2-git'>Git</a></li>
