Add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }} {% if page.title %} – {% endif %}</title>
    <meta name="author" content="{{ site.author.name }}" />
+   {% include google_analytics.textile %}
 </head>
 <body>
     <header>
