Add bootstrap fluid grid

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
    <title>{{ page.title }} {% if page.title %} – {% endif %}</title>
    <meta name="author" content="{{ site.author.name }}" />
    {% include google_analytics.textile %}
+   {% include style.textile %}
 </head>
 <body>
     <header>
