--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Enriqueta;
+  src: url("http://fonts.googleapis.com/css?family=Enriqueta")
+}
+
+body {
+  font-family: Enriqueta, serif;
+}
+
 #main {
   -moz-column-count: 3;
   -moz-column-gap: 20px;
