--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,30 +1,1 @@
-@font-face {
-  font-family: Enriqueta;
-  src: url("http://fonts.googleapis.com/css?family=Enriqueta")
-}
-
-body {
-  font-family: Enriqueta, serif;
-}
-
-#main {
-  -moz-column-count: 3;
-  -moz-column-gap: 20px;
-  -webkit-column-count: 3;
-  -webkit-column-gap: 20px;
-  column-count: 3;
-  column-gap: 20px;
-}
-
-#bio {
-  -moz-column-span: 1;
-  -webkit-column-span: 1;
-  column-span: 1;
-}
-
-.posts {
-  -moz-column-span: 2;
-  -webkit-column-span: 2;
-  column-span: 2;
-}
-
+@font-face{font-family:Enriqueta;src:url("http://fonts.googleapis.com/css?family=Enriqueta")}body{font-family:Enriqueta,serif}#main{-moz-column-count:3;-moz-column-gap:20px;-webkit-column-count:3;-webkit-column-gap:20px;column-count:3;column-gap:20px}#bio{-moz-column-span:1;-webkit-column-span:1;column-span:1}.posts{-moz-column-span:2;-webkit-column-span:2;column-span:2}
