--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -6,6 +6,7 @@
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="/assets/javascripts/vendor.min.js"></script>
 
     {% if site.google_analytics %}
