--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
-<html>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
     {% if page.description %}
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     {% include style.textile %}
 
     {% if site.google_analytics %}
-    <!-- google analytics async -->
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ site.google_analytics.account }}']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+      {% include google_analytics.textile %}
     {% endif %}
   </head>
   <body class="container">
-    <header>
-        <h1><a href="/">{{ site.title }}</a> by {{ site.author.name }}</h1>
+    <header class="row">
+      <h1><a href="/">{{ site.title }}</a> by {{ site.author.name }}</h1>
     </header>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    {% include js.textile %}
 
-    <div class="content">
-      <h3>{{ page.title }}</h3>
+    {% if page.title %}
+      <h3 class="row">{{ page.title }}</h3>
+    {% endif %}
+
+    <div class="row content">
       {{ content }}
     </div>
+
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
