Add reading time to layouts
Import the post layout from whiteglass since we need to override it.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,7 @@ layout: default
             {% if post.external-url %}
               • <a href="{{ post.url | relative_url }}">Permalink</a>
             {% endif %}
+            • {{ post.content | reading_time }} minute read
           </p>
         </header>
 
